--- a/contacto.html
+++ b/contacto.html
@@ -174,7 +174,6 @@ Triki Team" />
             <div class="row justify-content-between">
                 <div class="col-auto">
                     <p> <i class='bx bxs-envelope'></i> atletismosantiago@gmail.com</p>
-                    <p> <i class='bx bxs-phone-call'></i> +34 618127115</p>
                 </div>
                 <div class="col-auto social-icons">
                     <a href="https://www.facebook.com/clubatletismo.santiago/?locale=es_ES"
@@ -225,6 +224,8 @@ Triki Team" />
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="./records_club.html">Récords del Club</a></li>
                             <li><a class="dropdown-item" href="./estadisticas_atleta.html">Estadísticas Atletas</a></li>
+                            <li><a class="dropdown-item" href="./ranking_club.html">Ranking del Club</a></li>
+
 
                         </ul>
                     </li>
@@ -259,13 +260,7 @@ Triki Team" />
                     <p>Av. Romero Donallo 29 entreplanta Santiago</p>
                 </div>
 
-                <!-- Columna de Número de Teléfono -->
-                <div class="col-lg-3 col-md-4">
-                    <i class="fas fa-phone-alt"></i> <!-- Icono de teléfono -->
-                    <h5>Número de Teléfono</h5>
-                    <p>+34 618127115</p>
-                </div>
-
+                
                 <!-- Columna de Correo Electrónico -->
                 <div class="col-lg-3 col-md-4">
                     <i class="far fa-envelope"></i> <!-- Icono de sobre -->
