--- a/contacto.html
+++ b/contacto.html
@@ -342,8 +342,7 @@ Triki Team" />
                         <li class="nav-item mb-2"><a href="./historia.html" class="nav-link p-0 text-muted">Historia</a>
                         </li>
 
-                        <li class="nav-item mb-2"><a href="https://swimburger-cas-app-demo.web.app/forms/licencia"
-                                class="nav-link p-0 text-muted">Inscripciones</a></li>
+                     
 
                         <li class="nav-item mb-2"><a href="./noticias.html" class="nav-link p-0 text-muted">Últimas
                                 Noticias</a></li>
@@ -356,6 +355,9 @@ Triki Team" />
 
                         <li class="nav-item mb-2"><a href="./estadisticas_atleta.html"
                                 class="nav-link p-0 text-muted">Estadísticas Atletas</a></li>
+
+                                <li class="nav-item mb-2"><a href="./ranking_club.html"
+                                    class="nav-link p-0 text-muted">Ranking del Club</a></li>     
 
                     </ul>
                 </div>
