--- a/records_club.html
+++ b/records_club.html
@@ -487,10 +487,6 @@ Triki Team" />
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="./historia.html" class="nav-link p-0 text-muted">Historia</a>
                         </li>
-
-                        <li class="nav-item mb-2"><a href="https://swimburger-cas-app-demo.web.app/forms/licencia"
-                                class="nav-link p-0 text-muted">Inscripciones</a></li>
-
                         <li class="nav-item mb-2"><a href="./noticias.html" class="nav-link p-0 text-muted">Últimas
                                 Noticias</a></li>
 
@@ -502,6 +498,8 @@ Triki Team" />
 
                         <li class="nav-item mb-2"><a href="./estadisticas_atleta.html"
                                 class="nav-link p-0 text-muted">Estadísticas Atletas</a></li>
+                        <li class="nav-item mb-2"><a href="./ranking_club.html"
+                            class="nav-link p-0 text-muted">Ranking del Club</a></li>        
 
                     </ul>
                 </div>
