--- a/ranking_club.html
+++ b/ranking_club.html
@@ -262,21 +262,19 @@ Triki Team" />
             <div class="row justify-content-center text-center d-flex align-items-center mt-0">
                 <form id="consultaForm" class="col-md-8">
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <label for="genero">Género:</label>
                             <select id="genero" class="form-control" required></select>
                         </div>
 
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <label for="tipo">Tipo:</label>
                             <select id="tipo" class="form-control" required>
-                                <!-- Opciones de temporadas -->
                             </select>
                         </div>
                         <div class="col-md-3">
                             <label for="tipoPrueba">Prueba:</label>
                             <select id="tipoPrueba" class="form-control" required>
-                                <!-- Opciones de tipos de prueba -->
                             </select>
                         </div>
                         <div class="col-md-3">
@@ -585,6 +583,28 @@ Triki Team" />
                 // Ordenar de mayor a menor
                 datosTotales.sort((a, b) => {
                     return parseFloat(b.Marca.replace(',', '.')) - parseFloat(a.Marca.replace(',', '.'));
+                });
+            } else if (datos[0].Title.startsWith('400')) {
+                // añadir un 0 al final de las marcas que tengan un solo decimal
+                const formatMarca = marca => {
+                    const parts = marca.split('.') || marca.split(',');
+                    if (parts.length > 1 && parts[parts.length - 1].length === 1) {
+                        parts[parts.length - 1] = parts[parts.length - 1] + '0';
+                    }
+                    return parts.join('.');
+                };
+
+                datosTotales.sort((a, b) => {
+                    const marcaA = formatMarca(a.Marca);
+                    const marcaB = formatMarca(b.Marca);
+                    
+                    // Primero, ordenar por la longitud total de la cadena
+                    if (marcaA.length !== marcaB.length) {
+                        return marcaA.length - marcaB.length;
+                    } else {
+                        // Si la longitud es la misma, ordenar por el valor numérico
+                        return parseFloat(marcaA.replace(',', '.')) - parseFloat(marcaB.replace(',', '.'));
+                    }
                 });
             } else {
                 datosTotales.sort((a, b) => {
