ultimos cambios lanzamiento web

--- a/index.html
+++ b/index.html
@@ -347,12 +347,12 @@ Triki Team" />
         <div class="container ">
             <div class="row text-center">
                 <div class="col-lg-3 col-sm-3 col-6 mt-4">
-                    <div class="display-4">+70</div>
+                    <div class="display-4">+100</div>
                     <p class="mb-0">Atletas Federados</p>
                 </div>
                 <div class="col-lg-3 col-sm-3 col-6 mt-4">
-                    <div class="display-4">+5</div>
-                    <p class="mb-0">Clubes Filiales</p>
+                    <div class="display-4">+7</div>
+                    <p class="mb-0">Clubes Asociados</p>
                 </div>
                 <div class="col-lg-3 col-sm-3 col-6 mt-4">
                     <div class="display-4">+3,4K</div>
