--- a/index.html
+++ b/index.html
@@ -382,6 +382,10 @@ Triki Team" />
                         Récords del Club
                     </a>
 
+                    <a href="./ranking_club.html" class="btn btn-primary" style="margin-right: 5%;">
+                        Ranking del Club
+                    </a>
+
                     <a href="./estadisticas_atleta.html" class="btn btn-primary">
                         Estadísticas Atletas
                     </a>
