--- a/index.html
+++ b/index.html
@@ -382,13 +382,15 @@ Triki Team" />
                         Récords del Club
                     </a>
 
-                    <a href="./ranking_club.html" class="btn btn-primary" style="margin-right: 2%;">
+                    
+                    <a href="./estadisticas_atleta.html" class="btn btn-primary" style="margin-right: 2%;">
+                        Estadísticas Atletas
+                    </a>
+
+                    <a href="./ranking_club.html" class="btn btn-primary" >
                         Ranking del Club
                     </a>
 
-                    <a href="./estadisticas_atleta.html" class="btn btn-primary">
-                        Estadísticas Atletas
-                    </a>
                 </div>
             </div>
 
