mejorado horizontal navbar

--- a/index.html
+++ b/index.html
@@ -854,6 +854,11 @@ Triki Team" />
             showMobilePatrocinadores();
         }
 
+        if ((screen.width < 1000 || window.innerWidth < 1000) && (screen.width > 500 || window.innerWidth > 500)) {
+            
+            document.getElementsByClassName('navbar-brand')[0].style.maxWidth = '25%';
+        }
+
     </script>
     <style>
         #modal-body p {
