cambiada la fecha en las noticias

--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@ Triki Team" />
                     break; // Importante: detener el bucle una vez que se ha encontrado la noticia
                 }
             }
-            console.log(noticia);
+            /*
             // Convertir la cadena de fecha a un objeto Date
             const fechaNueva = new Date(noticia.Fecha);
 
@@ -822,7 +822,7 @@ Triki Team" />
             const ano = fechaNueva.getFullYear();
 
             // Formatear la fecha como "DD/MM/YYYY"
-            const fechaFormateada = `${dia}/${mes}/${ano}`;
+            const fechaFormateada = `${dia}/${mes}/${ano}`;*/
             const modalBody = document.getElementById('modal-body');
             const imagenUrl = noticia.Imagen || 'https://www.atletismosantiago.club/img/bg_banner1.webp';
 
@@ -831,7 +831,7 @@ Triki Team" />
                 <img src="${imagenUrl}" class="img-fluid mb-3" loading="lazy" alt="${noticia.Titulo}">
                 <h5>${noticia.Titulo}</h5>
                 <p>${noticia.Contenido}</p>
-                <p><strong>Fecha:</strong> ${fechaFormateada}</p>
+                <p><strong>Fecha:</strong> ${noticia.Fecha}</p>
             `;
         }
 
